--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('/bg.jpeg');
+    background-image: url('bg.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
 }
